--- a/koreanpageup/basic_word_1.html
+++ b/koreanpageup/basic_word_1.html
@@ -406,14 +406,47 @@
 				</div>
 			</div>
 			<div class="content color-7">
-				<h2 class="content__title">Cinta</h2>
+				<h2 class="content__title">ホテル</h2>
 				<ul id="stack_cinta" class="stack stack--cinta">
-					<li class="stack__item"><img src="img/6.png" alt="Tree 6" /></li>
-					<li class="stack__item"><img src="img/1.png" alt="Tree 1" /></li>
-					<li class="stack__item"><img src="img/3.png" alt="Tree 3" /></li>
-					<li class="stack__item"><img src="img/2.png" alt="Tree 2" /></li>
-					<li class="stack__item"><img src="img/4.png" alt="Tree 4" /></li>
-					<li class="stack__item"><img src="img/7.png" alt="Tree 7" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/0-0.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/01.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/02.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/03.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/04.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/05.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/06.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/07.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/08.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/09.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/10.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/11.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/12.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/13.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/14.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/15.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/16.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/17.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/18.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/19.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/20.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/21.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/22.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/23.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/24.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/25.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/26.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/27.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/28.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/29.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/30.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/31.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/32.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/33.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/34.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/35.png" alt="Tree 6" /></li>
+					<li class="stack__item"><img src="img/korean_hotel/36.png" alt="Tree 6" /></li>
+				
+				
 				</ul>
 				<div class="controls">
 					<button class="button button--sonar button--reject" data-stack="stack_cinta"><i class="fa fa-times"></i><span class="text-hidden">Reject</span></button>
